# hs-stb-perlin

./: .gitignore  README.md  stb-perlin.cabal
bench/: BenchmarkSuite.hs
src/: Perlin.hs
src/STB/: Perlin.hs
